--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "normalize.css": "^8.0.1",
     "particles-bg": "^2.4.1",
     "prism-react-renderer": "^1.0.2",
+    "rc-menu": "^8.10.6",
     "react": "^16.12.0",
     "react-awesome-button": "^6.3.1",
     "react-dom": "^16.12.0",
     "react-parallax": "^3.0.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
