--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hellos",
+  "name": "avto-vykup",
   "version": "0.1.0",
   "private": true,
   "homepage": "./",
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.21.1",
     "normalize.css": "^8.0.1",
     "particles-bg": "^2.4.1",
     "prism-react-renderer": "^1.0.2",
@@ -15,7 +16,8 @@
     "react-awesome-button": "^6.3.1",
     "react-dom": "^16.12.0",
     "react-parallax": "^3.0.0",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "react-scroll": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
